// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoScanWebpackPlugin should generate auto scan with Webpack configuration 1`] = `
"import { lazy } from "react";

interface ComponentType {
    name: string,
    relativePath: string,
    component: ComponentType,
    source?: string
}

const __TestDirectoryStructure_A_A1_ts = lazy(() => import("@/TestDirectoryStructure/A/A1.ts"));
const __TestDirectoryStructure_A_AA_AA1_ts = lazy(() => import("@/TestDirectoryStructure/A/AA/AA1.ts"));
const __TestDirectoryStructure_A_js = lazy(() => import("@/TestDirectoryStructure/A.js"));
const __TestDirectoryStructure_A_ts = lazy(() => import("@/TestDirectoryStructure/A.ts"));

const components: ComponentType[] = [
   { name: "__TestDirectoryStructure_A_A1_ts", component: __TestDirectoryStructure_A_A1_ts, relativePath: "/TestDirectoryStructure/A/A1.ts"},
   { name: "__TestDirectoryStructure_A_AA_AA1_ts", component: __TestDirectoryStructure_A_AA_AA1_ts, relativePath: "/TestDirectoryStructure/A/AA/AA1.ts"},
   { name: "__TestDirectoryStructure_A_js", component: __TestDirectoryStructure_A_js, relativePath: "/TestDirectoryStructure/A.js"},
   { name: "__TestDirectoryStructure_A_ts", component: __TestDirectoryStructure_A_ts, relativePath: "/TestDirectoryStructure/A.ts"},
];

export default components;"
`;

exports[`AutoScanWebpackPlugin should generate auto scan with Webpack configuration 2`] = `
"import { lazy } from "react";

interface ComponentType {
    name: string,
    relativePath: string,
    component: ComponentType,
    source?: string
}
import __TestDirectoryStructure_A_A1_ts_source from "raw-loader!@/TestDirectoryStructure/A/A1.ts";
import __TestDirectoryStructure_A_AA_AA1_ts_source from "raw-loader!@/TestDirectoryStructure/A/AA/AA1.ts";
import __TestDirectoryStructure_A_ts_source from "raw-loader!@/TestDirectoryStructure/A.ts";

const __TestDirectoryStructure_A_A1_ts = lazy(() => import("@/TestDirectoryStructure/A/A1.ts"));
const __TestDirectoryStructure_A_AA_AA1_ts = lazy(() => import("@/TestDirectoryStructure/A/AA/AA1.ts"));
const __TestDirectoryStructure_A_ts = lazy(() => import("@/TestDirectoryStructure/A.ts"));

const components: ComponentType[] = [
   { name: "__TestDirectoryStructure_A_A1_ts", component: __TestDirectoryStructure_A_A1_ts, relativePath: "/TestDirectoryStructure/A/A1.ts"source: __TestDirectoryStructure_A_A1_ts_source},
   { name: "__TestDirectoryStructure_A_AA_AA1_ts", component: __TestDirectoryStructure_A_AA_AA1_ts, relativePath: "/TestDirectoryStructure/A/AA/AA1.ts"source: __TestDirectoryStructure_A_AA_AA1_ts_source},
   { name: "__TestDirectoryStructure_A_ts", component: __TestDirectoryStructure_A_ts, relativePath: "/TestDirectoryStructure/A.ts"source: __TestDirectoryStructure_A_ts_source},
];

export default components;"
`;
